--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DRapp</string>
     <string name="DRapp">DRapp</string>
+    <string name="title">Diabetic Retinopathy Detector</string>
+    <string name="Description">Please upload your fundus image</string>
 </resources>
